<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menuPrincipal"
            android:icon="@drawable/ic_menumain_24"
            android:title="@string/menu_menuPrincipal"/>
        <item
            android:id="@+id/nav_calculadora"
            android:icon="@drawable/ic_calculador_24"
            android:title="@string/menu_calculadora" />
        <item
            android:id="@+id/nav_sonidos"
            android:icon="@drawable/ic_baseline_music_note_24"
            android:title="@string/menu_sonidos" />
        <item
            android:id="@+id/nav_sitioweb"
            android:icon="@drawable/ic_sitioweb_24"
            android:title="@string/menu_sitioweb" />
        <item
            android:id="@+id/nav_abriraplicaciones"
            android:icon="@drawable/ic_baseline_apps_24"
            android:title="@string/menu_abriraplicaciones" />
        <item
            android:id="@+id/nav_maravillasmodernas"
            android:icon="@drawable/ic_baseline_directions_subway_24"
            android:title="@string/menu_maravillasmodernas" />
        <item
            android:id="@+id/nav_visualizador3d"
            android:icon="@drawable/ic_baseline_directions_walk_24"
            android:title="@string/menu_mapa" />
    </group>
</menu>